Table layout examples

--- a/src/pages/docs/table-layout.mdx
+++ b/src/pages/docs/table-layout.mdx
@@ -18,35 +18,62 @@ export const classes = { plugin }
 
 Use `table-auto` to allow the table to automatically size columns to fit the contents of the cell.
 
-```html
+```html emerald
 <template preview>
   <table class="table-auto">
     <thead>
       <tr>
-        <th class="px-4 py-2">Title</th>
-        <th class="px-4 py-2">Author</th>
-        <th class="px-4 py-2">Views</th>
+        <th class="px-4 py-2 text-emerald-600">Title</th>
+        <th class="px-4 py-2 text-emerald-600">Author</th>
+        <th class="px-4 py-2 text-emerald-600">Views</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td class="border px-4 py-2">Intro to CSS</td>
-        <td class="border px-4 py-2">Adam</td>
-        <td class="border px-4 py-2">858</td>
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">Intro to CSS</td>
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">Adam</td>
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">858</td>
       </tr>
-      <tr class="bg-gray-100">
-        <td class="border px-4 py-2">A Long and Winding Tour of the History of UI Frameworks and Tools and the Impact on Design</td>
-        <td class="border px-4 py-2">Adam</td>
-        <td class="border px-4 py-2">112</td>
+      <tr class="bg-emerald-200">
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">A Long and Winding Tour of the History of UI Frameworks and Tools and the Impact on Design</td>
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">Adam</td>
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">112</td>
       </tr>
       <tr>
-        <td class="border px-4 py-2">Intro to JavaScript</td>
-        <td class="border px-4 py-2">Chris</td>
-        <td class="border px-4 py-2">1,280</td>
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">Intro to JavaScript</td>
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">Chris</td>
+        <td class="border border-emerald-500 px-4 py-2 text-emerald-600 font-medium">1,280</td>
       </tr>
     </tbody>
   </table>
 </template>
+
+<table class="**table-auto**">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Views</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Intro to CSS</td>
+      <td>Adam</td>
+      <td>858</td>
+    </tr>
+    <tr class="bg-emerald-200">
+      <td>A Long and Winding Tour of the History of UI Frameworks and Tools and the Impact on Design</td>
+      <td>Adam</td>
+      <td>112</td>
+    </tr>
+    <tr>
+      <td>Intro to JavaScript</td>
+      <td>Chris</td>
+      <td>1,280</td>
+    </tr>
+  </tbody>
+</table>
 ```
 
 ## Fixed
@@ -55,35 +82,62 @@ Use `table-fixed` to allow the table to ignore the content and use fixed widths 
 
 You can manually set the widths for some columns and the rest of the available width will be divided evenly amongst the columns without explicit width.
 
-```html
+```html lightBlue
 <template preview>
   <table class="table-fixed">
     <thead>
       <tr>
-        <th class="w-1/2 px-4 py-2">Title</th>
-        <th class="w-1/4 px-4 py-2">Author</th>
-        <th class="w-1/4 px-4 py-2">Views</th>
+        <th class="w-1/2 px-4 py-2 text-light-blue-600">Title</th>
+        <th class="w-1/4 px-4 py-2 text-light-blue-600">Author</th>
+        <th class="w-1/4 px-4 py-2 text-light-blue-600">Views</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td class="border px-4 py-2">Intro to CSS</td>
-        <td class="border px-4 py-2">Adam</td>
-        <td class="border px-4 py-2">858</td>
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">Intro to CSS</td>
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">Adam</td>
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">858</td>
       </tr>
-      <tr class="bg-gray-100">
-        <td class="border px-4 py-2">A Long and Winding Tour of the History of UI Frameworks and Tools and the Impact on Design</td>
-        <td class="border px-4 py-2">Adam</td>
-        <td class="border px-4 py-2">112</td>
+      <tr class="bg-light-blue-200">
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">A Long and Winding Tour of the History of UI Frameworks and Tools and the Impact on Design</td>
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">Adam</td>
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">112</td>
       </tr>
       <tr>
-        <td class="border px-4 py-2">Intro to JavaScript</td>
-        <td class="border px-4 py-2">Chris</td>
-        <td class="border px-4 py-2">1,280</td>
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">Intro to JavaScript</td>
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">Chris</td>
+        <td class="border border-light-blue-500 px-4 py-2 text-light-blue-600 font-medium">1,280</td>
       </tr>
     </tbody>
   </table>
 </template>
+
+<table class="**table-fixed**">
+  <thead>
+    <tr>
+      <th class="w-1/2 ...">Title</th>
+      <th class="w-1/4 ...">Author</th>
+      <th class="w-1/4 ...">Views</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Intro to CSS</td>
+      <td>Adam</td>
+      <td>858</td>
+    </tr>
+    <tr class="bg-blue-200">
+      <td>A Long and Winding Tour of the History of UI Frameworks and Tools and the Impact on Design</td>
+      <td>Adam</td>
+      <td>112</td>
+    </tr>
+    <tr>
+      <td>Intro to JavaScript</td>
+      <td>Chris</td>
+      <td>1,280</td>
+    </tr>
+  </tbody>
+</table>
 ```
 
 ## Customizing
