--- a/src/pages/docs/guides/vue-3-vite.mdx
+++ b/src/pages/docs/guides/vue-3-vite.mdx
@@ -25,7 +25,7 @@ cd my-project && yarn
 
 ## Setting up Tailwind CSS
 
-Install Tailwind and Autoprefixer as `devDepencies` using `npm` or `yarn`:
+Install Tailwind and Autoprefixer as `devDependencies` using `npm` or `yarn`:
 
 ```shell
 npm install -D tailwindcss autoprefixer@^9
