round examples in display

--- a/src/pages/docs/display.mdx
+++ b/src/pages/docs/display.mdx
@@ -16,9 +16,9 @@ Use `block` to create a block-level element.
 ```html lightBlue
 <template preview>
   <div class="p-4 space-y-4 bg-light-blue-300 bg-stripes bg-stripes-white rounded-md">
-    <span class="block text-white font-extrabold text-center bg-light-blue-500 p-6">1</span>
-    <span class="block text-white font-extrabold text-center bg-light-blue-500 p-6">2</span>
-    <span class="block text-white font-extrabold text-center bg-light-blue-500 p-6">3</span>
+    <span class="block rounded-md text-white font-extrabold text-center bg-light-blue-500 p-6">1</span>
+    <span class="block rounded-md text-white font-extrabold text-center bg-light-blue-500 p-6">2</span>
+    <span class="block rounded-md text-white font-extrabold text-center bg-light-blue-500 p-6">3</span>
   </div>
 </template>
 
@@ -62,9 +62,9 @@ Use `inline-block` to create an inline block-level element.
 ```html rose
 <template preview>
   <div class="p-4 space-x-4 bg-rose-300 bg-stripes bg-stripes-white rounded-md">
-    <div class="inline-block text-white font-extrabold text-center bg-rose-500 px-6 py-4">1</div>
-    <div class="inline-block text-white font-extrabold text-center bg-rose-500 px-6 py-4">2</div>
-    <div class="inline-block text-white font-extrabold text-center bg-rose-500 px-6 py-4">3</div>
+    <div class="inline-block rounded-md text-white font-extrabold text-center bg-rose-500 px-6 py-4">1</div>
+    <div class="inline-block rounded-md text-white font-extrabold text-center bg-rose-500 px-6 py-4">2</div>
+    <div class="inline-block rounded-md text-white font-extrabold text-center bg-rose-500 px-6 py-4">3</div>
   </div>
 </template>
 
@@ -82,9 +82,9 @@ Use `inline` to create an inline element.
 ```html amber
 <template preview>
   <div class="bg-amber-300 bg-stripes bg-stripes-white rounded-md">
-    <div class="inline text-white font-extrabold text-center bg-amber-500 px-6 py-4">1</div>
-    <div class="inline text-white font-extrabold text-center bg-amber-500 px-6 py-4">2</div>
-    <div class="inline text-white font-extrabold text-center bg-amber-500 px-6 py-4">3</div>
+    <div class="inline rounded-md text-white font-extrabold text-center bg-amber-500 px-6 py-4">1</div>
+    <div class="inline rounded-md text-white font-extrabold text-center bg-amber-500 px-6 py-4">2</div>
+    <div class="inline rounded-md text-white font-extrabold text-center bg-amber-500 px-6 py-4">3</div>
   </div>
 </template>
 
@@ -102,9 +102,9 @@ Use `flex` to create a block-level flex container.
 ```html emerald
 <template preview>
   <div class="p-4 flex space-x-4 bg-emerald-300 bg-stripes bg-stripes-white rounded-md">
-    <div class="flex-1 text-white font-extrabold text-center bg-emerald-500 p-6">1</div>
-    <div class="flex-1 text-white font-extrabold text-center bg-emerald-500 p-6">2</div>
-    <div class="flex-1 text-white font-extrabold text-center bg-emerald-500 p-6">3</div>
+    <div class="flex-1 rounded-md text-white font-extrabold text-center bg-emerald-500 p-6">1</div>
+    <div class="flex-1 rounded-md text-white font-extrabold text-center bg-emerald-500 p-6">2</div>
+    <div class="flex-1 rounded-md text-white font-extrabold text-center bg-emerald-500 p-6">3</div>
   </div>
 </template>
 
@@ -122,9 +122,9 @@ Use `inline-flex` to create an inline flex container.
 ```html indigo
 <template preview>
   <div class="p-4 inline-flex space-x-4 bg-indigo-300 bg-stripes bg-stripes-white rounded-md">
-    <div class="flex-1 text-white font-extrabold text-center bg-indigo-500 px-6 py-4">1</div>
-    <div class="flex-1 text-white font-extrabold text-center bg-indigo-500 px-6 py-4">2</div>
-    <div class="flex-1 text-white font-extrabold text-center bg-indigo-500 px-6 py-4">3</div>
+    <div class="flex-1 rounded-md text-white font-extrabold text-center bg-indigo-500 px-6 py-4">1</div>
+    <div class="flex-1 rounded-md text-white font-extrabold text-center bg-indigo-500 px-6 py-4">2</div>
+    <div class="flex-1 rounded-md text-white font-extrabold text-center bg-indigo-500 px-6 py-4">3</div>
   </div>
 </template>
 
@@ -142,15 +142,15 @@ Use `grid` to create a grid container.
 ```html fuchsia
 <template preview>
   <div class="p-4 grid gap-4 grid-cols-3 bg-fuchsia-300 bg-stripes bg-stripes-white rounded-md">
-    <div class="bg-fuchsia-400 h-12"></div>
-    <div class="bg-fuchsia-500 h-12"></div>
-    <div class="bg-fuchsia-400 h-12"></div>
-    <div class="bg-fuchsia-500 h-12"></div>
-    <div class="bg-fuchsia-400 h-12"></div>
-    <div class="bg-fuchsia-500 h-12"></div>
-    <div class="bg-fuchsia-400 h-12"></div>
-    <div class="bg-fuchsia-500 h-12"></div>
-    <div class="bg-fuchsia-400 h-12"></div>
+    <div class="bg-fuchsia-400 rounded-md h-12"></div>
+    <div class="bg-fuchsia-500 rounded-md h-12"></div>
+    <div class="bg-fuchsia-400 rounded-md h-12"></div>
+    <div class="bg-fuchsia-500 rounded-md h-12"></div>
+    <div class="bg-fuchsia-400 rounded-md h-12"></div>
+    <div class="bg-fuchsia-500 rounded-md h-12"></div>
+    <div class="bg-fuchsia-400 rounded-md h-12"></div>
+    <div class="bg-fuchsia-500 rounded-md h-12"></div>
+    <div class="bg-fuchsia-400 rounded-md h-12"></div>
   </div>
 </template>
 
@@ -166,14 +166,14 @@ Use `inline-grid` to create an inline grid container.
 ```html lightBlue
 <template preview>
   <span class="inline-grid grid-cols-3 gap-x-4 p-4 bg-light-blue-300 bg-stripes bg-stripes-white rounded-md">
-    <span class="text-white font-extrabold text-center bg-light-blue-500 px-6 py-4">1</span>
-    <span class="text-white font-extrabold text-center bg-light-blue-500 px-6 py-4">1</span>
-    <span class="text-white font-extrabold text-center bg-light-blue-500 px-6 py-4">1</span>
+    <span class="text-white rounded-md font-extrabold text-center bg-light-blue-500 px-6 py-4">1</span>
+    <span class="text-white rounded-md font-extrabold text-center bg-light-blue-500 px-6 py-4">1</span>
+    <span class="text-white rounded-md font-extrabold text-center bg-light-blue-500 px-6 py-4">1</span>
   </span>
   <span class="inline-grid grid-cols-3 gap-x-4 p-4 bg-light-blue-300 bg-stripes bg-stripes-white rounded-md">
-    <span class="text-white font-extrabold text-center bg-light-blue-500 px-6 py-4">2</span>
-    <span class="text-white font-extrabold text-center bg-light-blue-500 px-6 py-4">2</span>
-    <span class="text-white font-extrabold text-center bg-light-blue-500 px-6 py-4">2</span>
+    <span class="text-white rounded-md font-extrabold text-center bg-light-blue-500 px-6 py-4">2</span>
+    <span class="text-white rounded-md font-extrabold text-center bg-light-blue-500 px-6 py-4">2</span>
+    <span class="text-white rounded-md font-extrabold text-center bg-light-blue-500 px-6 py-4">2</span>
   </span>
 </template>
 
@@ -196,12 +196,12 @@ Use `contents` to create a "phantom" container whose children act like direct ch
 ```html purple
 <template preview>
   <div class="flex bg-purple-300 bg-stripes bg-stripes-white rounded-md">
-    <div class="flex-1 m-2 text-white font-extrabold text-center bg-purple-500 px-6 py-4">1</div>
+    <div class="flex-1 rounded-md m-2 text-white font-extrabold text-center bg-purple-500 px-6 py-4">1</div>
     <div class="contents">
-      <div class="flex-1 m-2 text-white font-extrabold text-center bg-purple-500 px-6 py-4">2</div>
-      <div class="flex-1 m-2 text-white font-extrabold text-center bg-purple-500 px-6 py-4">3</div>
+      <div class="flex-1 rounded-md m-2 text-white font-extrabold text-center bg-purple-500 px-6 py-4">2</div>
+      <div class="flex-1 rounded-md m-2 text-white font-extrabold text-center bg-purple-500 px-6 py-4">3</div>
     </div>
-    <div class="flex-1 m-2 text-white font-extrabold text-center bg-purple-500 px-6 py-4">4</div>
+    <div class="flex-1 rounded-md m-2 text-white font-extrabold text-center bg-purple-500 px-6 py-4">4</div>
   </div>
 </template>
 
@@ -260,9 +260,9 @@ Use `hidden` to set an element to `display: none` and remove it from the page la
 ```html amber
 <template preview>
   <div class="p-4 flex space-x-4 bg-amber-300 bg-stripes bg-stripes-white rounded-md">
-    <div class="hidden text-white font-extrabold text-center bg-amber-500 px-6 py-4" hidden>1</div>
-    <div class="text-white font-extrabold text-center bg-amber-500 px-6 py-4">2</div>
-    <div class="text-white font-extrabold text-center bg-amber-500 px-6 py-4">3</div>
+    <div class="hidden text-white rounded-md font-extrabold text-center bg-amber-500 px-6 py-4" hidden>1</div>
+    <div class="text-white rounded-md font-extrabold text-center bg-amber-500 px-6 py-4">2</div>
+    <div class="text-white rounded-md font-extrabold text-center bg-amber-500 px-6 py-4">3</div>
   </div>
 </template>
 
