update display docs

--- a/src/pages/docs/display.mdx
+++ b/src/pages/docs/display.mdx
@@ -81,7 +81,7 @@ Use `inline` to create an inline element.
 
 ```html amber
 <template preview>
-  <div class="bg-amber-300 bg-stripes bg-stripes-white rounded-md">
+  <div class="bg-amber-300 bg-stripes bg-stripes-white rounded-md space-x-3">
     <div class="inline rounded-md text-white font-extrabold text-center bg-amber-500 px-6 py-4">1</div>
     <div class="inline rounded-md text-white font-extrabold text-center bg-amber-500 px-6 py-4">2</div>
     <div class="inline rounded-md text-white font-extrabold text-center bg-amber-500 px-6 py-4">3</div>
@@ -164,7 +164,7 @@ Use `grid` to create a grid container.
 Use `inline-grid` to create an inline grid container.
 
 ```html lightBlue
-<template preview>
+<template preview class="p-10 space-x-3">
   <span class="inline-grid grid-cols-3 gap-x-4 p-4 bg-light-blue-300 bg-stripes bg-stripes-white rounded-md">
     <span class="text-white rounded-md font-extrabold text-center bg-light-blue-500 px-6 py-4">1</span>
     <span class="text-white rounded-md font-extrabold text-center bg-light-blue-500 px-6 py-4">1</span>
